kubernetes/apps/portainer/base/service.yaml
# Source: portainer/templates/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: portainer-service
  namespace: portainer
  labels:
    io.portainer.kubernetes.application.stack: portainer
    app.kubernetes.io/name: portainer
    app.kubernetes.io/instance: portainer
    app.kubernetes.io/version: "ce-latest-ee-2.19.3"

spec:
  ports:
    - port: 9000
      targetPort: 9000
      protocol: TCP
      name: http
    - port: 9443
      targetPort: 9443
      protocol: TCP
      name: https
  selector:
    app.kubernetes.io/name: portainer
    app.kubernetes.io/instance: portainer
